# memcache

memcached-1.5.10/: CMakeLists.txt  memcached.h
